<resources>
    <string name="app_name">GK Quiz</string>
    <string name="question1">1.The firsts officially recognized test match was played between?</string>
    <string name="question2">2.In which year of First World War Germany declared war on Russia and France?</string>
    <string name="question3">3.India has largest deposits of ____ in the world.</string>
    <string name="question4">4. How many states are in India?</string>
    <string name="question5">5.India\'s first satellite is named after</string>
    <string name="question6">6.In which season do we need more fat?</string>
    <string name="question7">7.In \'Sultan\' movie, Who played the Role of Sultan?</string>
    <string name="question8">8.Philology is the</string>
    <string name="question9">9.The \'Black flag\' signifies</string>
    <string name="question10">10.The chief constituent of gobar gas is</string>
    <string name="question11">1.Which country won the Cricket World Cup in 2015?</string>
    <string name="question12">2.What is the formula of sulfuric acid?</string>
    <string name="question13">3.The Indian Air Force celebrated its Golden Jubilee in</string>
    <string name="question14">4.What is the capital of china?</string>
    <string name="question15">5.Who is the CEO of Apple?</string>
    <string name="question16">6.If speed of rotation of the earth increases, weight of the body</string>
    <string name="question17">7.IDA stands for</string>
    <string name="question18">8.Who was the first Prime minister of India?</string>
    <string name="question19">9.The unit of current is</string>
    <string name="question20">10.The telescope is used for viewing</string>
    <string name="question21">1.The term butterfly is associated with</string>
    <string name="question22">2.Uttar Pradesh is surrounded by ___ in north</string>
    <string name="question23">3.The term Cover drive associated with which of the following sports?</string>
    <string name="question24">4.Which is the capital of Madhya Pradesh?</string>
    <string name="question25">5.In a normal human being, how much time does food take to reach the end of the intestine for complete absorption?</string>
    <string name="question26">6.HP stands for</string>
    <string name="question27">7.India has</string>
    <string name="question28">8.In which country Olympic 2016 held</string>
    <string name="question29">9.The reaction which converts sugar solution into alcohol is an example of</string>
    <string name="question30">10.The SI unit of ___ is named after Andre Marie Ampere.</string>
    <string name="question31">1.In which of the following team events India got a Gold Medal at the 2002 Asian Games?</string>
    <string name="question32">2.The National Emblem was adopted by Government of India on</string>
    <string name="question33">3.The national sport of Canada is</string>
    <string name="question34">4.The scientist who first discovered that the earth revolves round the sun was</string>
    <string name="question35">5.Where is the permanent secretariat of the SAARC?</string>
    <string name="question36">6.Who is the CEO of Microsoft?</string>
    <string name="question37">7.Which is the state with largest urban population?</string>
    <string name="question38">8.Which Bank has the maximum number of branches?</string>
    <string name="question39">9.When cream is separated from milk</string>
    <string name="question40">10.What is the duration of football match?</string>
    <string name="question41">1.The origin of modern badminton is attributed to</string>
    <string name="question42">2.In cricket, a run taken when the ball passes the batsman without touching his bat or body is called</string>
    <string name="question43">3.What is the capital of England?</string>
    <string name="question44">4.India is the ____ grower of pulses.</string>
    <string name="question45">5.India\'s first atomic power station was set up at</string>
    <string name="question46">6.Radioactive substances can be produced readily in</string>
    <string name="question47">7.The \'Red Triangle\' symbol denotes</string>
    <string name="question48">8.Pressure cooker cooks rice faster because</string>
    <string name="question49">9.Primary rainbow is formed when light suffers</string>
    <string name="question50">10.The playground of lawn tennis is called</string>


</resources>
