<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.girish.gkquiz.firsttest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:background="#d3ecfc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TIME:  "
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#33bdef"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2:00"
                android:textColor="#33bdef"
                android:textSize="24sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question1"
            android:paddingBottom="10dip"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/q1_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:orientation="vertical"
            android:paddingBottom="30dip">
            <RadioButton
                android:id="@+id/q1a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="England-Australia"
                />
            <RadioButton
                android:id="@+id/q1a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="England-India"
                />
            <RadioButton
                android:id="@+id/q1a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="England-New Zealand"
                />
            <RadioButton
                android:id="@+id/q1a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="England-West indies "
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:paddingBottom="10dip"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/q2_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:orientation="vertical"
            android:paddingBottom="30dip">
            <RadioButton
                android:id="@+id/q2a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1913"
                />
            <RadioButton
                android:id="@+id/q2a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1914"
                />
            <RadioButton
                android:id="@+id/q2a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1915"/>
            <RadioButton
                android:id="@+id/q2a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1917" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:paddingBottom="10dip"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/q3_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:orientation="vertical"
            android:paddingBottom="30dip">
            <RadioButton
                android:id="@+id/q3a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gold"
                />
            <RadioButton
                android:id="@+id/q3a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Copper"
                />
            <RadioButton
                android:id="@+id/q3a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mica"/>
            <RadioButton
                android:id="@+id/q3a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="None of the above" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:paddingBottom="10dip"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/q4_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:orientation="vertical"
            android:paddingBottom="30dip">
            <RadioButton
                android:id="@+id/q4a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="28"
                />
            <RadioButton
                android:id="@+id/q4a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="27"
                />
            <RadioButton
                android:id="@+id/q4a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="30"/>
            <RadioButton
                android:id="@+id/q4a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="29" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:paddingBottom="10dip"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/q5_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:orientation="vertical"
            android:paddingBottom="30dip">
            <RadioButton
                android:id="@+id/q5a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Aryabhatta"
                />
            <RadioButton
                android:id="@+id/q5a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Albert Einstein"
                />
            <RadioButton
                android:id="@+id/q5a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="A.P.J Abdul Kalam"/>
            <RadioButton
                android:id="@+id/q5a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bhaskara I" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            android:paddingBottom="10dip"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/q6_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:orientation="vertical"
            android:paddingBottom="30dip">
            <RadioButton
                android:id="@+id/q6a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rainy season"
                />
            <RadioButton
                android:id="@+id/q6a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Winter"
                />
            <RadioButton
                android:id="@+id/q6a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Spring"/>
            <RadioButton
                android:id="@+id/q6a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Summer" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            android:paddingBottom="10dip"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/q7_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:orientation="vertical"
            android:paddingBottom="30dip">
            <RadioButton
                android:id="@+id/q7a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Amir Khan"
                />
            <RadioButton
                android:id="@+id/q7a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sharukh Khan"
                />
            <RadioButton
                android:id="@+id/q7a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Salman Khan"/>
            <RadioButton
                android:id="@+id/q7a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Akshay Kumar" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question8"
            android:paddingBottom="10dip"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/q8_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:orientation="vertical"
            android:paddingBottom="30dip">
            <RadioButton
                android:id="@+id/q8a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Study of Bones"
                />
            <RadioButton
                android:id="@+id/q8a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Study of Muscels"
                />
            <RadioButton
                android:id="@+id/q8a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Study of Architecture"/>
            <RadioButton
                android:id="@+id/q8a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Science of Languages" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question9"
            android:paddingBottom="10dip"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/q9_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:orientation="vertical"
            android:paddingBottom="30dip">
            <RadioButton
                android:id="@+id/q9a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="revolution/danger"
                />
            <RadioButton
                android:id="@+id/q9a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="peace"
                />
            <RadioButton
                android:id="@+id/q9a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="protest"/>
            <RadioButton
                android:id="@+id/q9a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="truce" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question10"
            android:paddingBottom="10dip"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/q10_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:orientation="vertical"
            android:paddingBottom="30dip">
            <RadioButton
                android:id="@+id/q10a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ethane"
                />
            <RadioButton
                android:id="@+id/q10a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Methane"
                />
            <RadioButton
                android:id="@+id/q10a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hydrogen"/>
            <RadioButton
                android:id="@+id/q10a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Carbon-di-oxide" />
        </RadioGroup>


        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:background="@drawable/custombtn"
            android:textColor="#ffffff"
            android:textSize="20dp"/>

    </LinearLayout>



</ScrollView>
